...
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="@+id/player_view"
            app:layout_constraintRight_toRightOf="@+id/player_view"
            app:layout_constraintTop_toBottomOf="@+id/player_view" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:text="Description:"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/thumbnailURLImageView"
            app:layout_constraintRight_toRightOf="@+id/thumbnailURLImageView"
            app:layout_constraintTop_toBottomOf="@+id/thumbnailURLImageView" />
    </android.support.constraint.ConstraintLayout>
...
